Fixed paralelized variant, and added one based on futures, big difference in performance between the 2 implementations